--- a/README.rdoc
+++ b/README.rdoc
@@ -1,17 +1,29 @@
-== 问卷调查系统
-
+## 问卷调查系统 
+---
 基本功能:
 
 * 问卷做成
+
   1.支持单选项目，多选项目，手动录入选项
+  
   2.可以设置为必须回答
+  
   3.可以对问卷评论
+  
   4.分享问卷调查分享至微博
+  
   5.调查结果公开
+  
   6.回答数限制
+  
   7.防止多重回答
+  
 * 问卷管理
+  
   1.问卷，回答，评论增删改查
+  
   2.终止问卷调查
+  
   3.问卷内容及结果下载
+
   4.查看结果
